--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+"rules": {
+    "no-restricted-syntax": [
+      "warn",
+      {
+        "selector": "Program",
+        "message": "Этот файл содержит комментарии!"
+      }
+    ]
+  }
 }
