--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^15.2.4",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -26,7 +25,9 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^15.2.4"
   }
 }
